# JavaTraining

./: README.md  build.gradle  settings.gradle
.devcontainer/: devcontainer.json
02_FizzBuzz/lv1/: README.md
02_FizzBuzz/lv1_with_tests/: README.md  build.gradle  settings.gradle
02_FizzBuzz/lv2/: README.md
02_FizzBuzz/lv2_with_tests/: .gitignore  build.gradle  settings.gradle
02_FizzBuzz/lv3/: README.md
02_FizzBuzz/lv4/: README.md
02_FizzBuzz/lv5/: README.md  result.txt
03_webapp/: build.gradle
03_webapp/docs/: !イントロダクション.pptx  !実習イントロダクション.pptx  00_要件.docx  01_基本・外部設計.docx  02_画面・機能設計書.docx  02_画面設計書.docx  09_データベーステーブル設計書.xlsx  91_ネーミングルール.docx  98_コーディングルール.docx  Java研修.drawio
03_webapp/docs/web/: pyproject.toml
03_webapp/docs/web/docs/: codingrule.md  design.md
03_webapp/docs/モックアップ/: _base.html.j2  index.html  kanyu_edit.html  kanyu_edit.html.j2  kanyu_result.html.j2  kanyu_search.html  kanyu_search.html.j2  pyproject.toml  ryokin_edit.html.j2  ryokin_result.html  ryokin_result.html.j2  ryokin_search.html.j2
03_webapp/extra/: eclipse-java-google-style-custom.xml
03_webapp/sql/: init.sql
batch/: build.gradle
design/docs/: design.md  index.md
docs/: Java研修.drawio  mkdocs.yml
docs/docs/: design.md  pagedesign.md  request.md
docs/officefiles/: 00_要件.docx
docs/モックアップ/: generate.py  index.html.j2  kanyu_result.html  ryokin_edit.html  ryokin_search.html  style.css
extra/: eclipse-java-google-style-custom.xml
report/: xxxxxx_テストケース.doc  xxxxxx_テストケース_作成例.docx  【作成例】NoX_XXテスト結果.xlsx
web/: build.gradle
webapp/: build.gradle
(+168 files in other folders)
