[tool.poetry]
name = "web"
version = "0.1.0"
description = ""
authors = ["Ohshima Yusuke <ohshima.yusuke@yukke.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mkdocs = "^1.4.3"
mkdocs-material = "^9.1.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
