[tool.poetry]
name = "モックアップ"
version = "0.1.0"
description = ""
authors = ["Ohshima Yusuke <ooshima@s-giken.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jinja2 = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
